--- a/frontend/src/fixing.css
+++ b/frontend/src/fixing.css
@@ -21,17 +21,14 @@ h2{
 }
 
 @media (min-width: 768px) {
-    .contenedor-campos {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: auto auto 20rem ;
-        column-gap: 1rem;
-    }
-
-    .campo:nth-child(3),
-    .campo:nth-child(4) {
-        grid-column: 1 / 3;
-    }
+  .contenedor-campos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+  .campo:last-child {
+    grid-column: 1 / 3;
+  }
 }
 
 .campo:nth-child(3) {
